# night

./: .gitattributes  .gitignore  .gitmodules  .replit  .travis.yml  CMakeLists.txt  ExtractCode.h  LICENSE  LICENSE.md  Lexer.h  Makefile  Night.cpp  README.md  Runtime.h  SECURITY.md  TIMELINE.md  Token.h  VERSION.md  code.nt  file_extraction.h  lexer.h  main.cpp  night.cpp  nightascii.txt  predefined.h  source.night  source.txt
.circleci/: config.yml
.github/workflows/: build  c-cpp.yml
DataTypes/: Function.h  Token.h  Variable.h
Night/: night
Night/src/: Lexer.h  Night.cpp  Runtime.h
Parser/: Parser.h
code/: README.md
code/include/: ast.cpp  ast.hpp  bytecode.h  bytecode.hpp  check.hpp  cmakedef.hpp  cmakedef.hpp.in  code_gen.hpp  codegen.hpp  debug.hpp  error.hpp  expression.hpp  function.h  interpreter.h  interpreter.hpp  interpreter_scope.hpp  language.hpp  lexer.hpp  parse_args.hpp  parse_file.hpp  parser.hpp  parser_scope.hpp  scope.hpp  scope_check.hpp  stack.h  statement_scope.hpp  stmt.hpp  token.hpp  type.hpp  util.hpp  utils.hpp  value.h  value.hpp  value_type.hpp
code/src/: ast.cpp  bytecode.c  bytecode.cpp  check.cpp  code_gen.cpp  codegen.cpp  debug.cpp  error.cpp  expression.cpp  interpreter.c  interpreter.cpp  interpreter_scope.cpp  language.cpp  lexer.cpp  main.cpp  parse_args.cpp  parse_file.cpp  parser.cpp  parser_scope.cpp  scope_check.cpp  stack.c  statement_scope.cpp  token.cpp  type.cpp  utils.cpp  value.c  value.cpp  value_type.cpp
code/version/: version.hpp  version.hpp.in
containers/: array_var.h  token.h  variable.h
docs/: bytecodes.txt  extras.html  index.html  install.html  learn.html  reference.html  syntax.txt
docs/scripts/: index.js  install.js
docs/style/: style.css
docs/styles/: code.css  header.css  index.css  install.css  learn.css  main.css  title.css
include/: error.h  error.hpp  interpreter.h  interpreter.hpp  lexer.h  lexer.hpp  night.h  night.hpp  parser.h  parser.hpp  token.h  token.hpp  utils.h  utils.hpp
include/back-end/: interpreter.hpp  lexer.hpp  night.hpp  parser.hpp  stmt.hpp  token.hpp  utils.hpp
include/front-end/: front-end.hpp
interpreter/: expr_parser.h  helpers.h  interpreter.h
lib/: array.h  error.h  file.h  string.h
night/include/: error.hpp  util.hpp
parser/: parser.h
samples/: test_samples.sh
src/: BitParser.h  CleanLine.h  DecParser.h  Error.h  ExtractCode.h  ExtractCode.hpp  ExtractLine.h  Function.h  IntParser.h  Lexer.h  Lexer.hpp  Makefile  Math Library.cpp  Matrix.cpp  Night.cpp  Output.h  Parser.h  Runtime.h  Runtime.hpp  Squid.h  StrParser.h  Token.h  Token.hpp  Transfer.h  Variable.h  VariableParser.h  a.out  error.cpp  error.h  file_extraction.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  main.cpp  night.cpp  night.h  output.h  parser.cpp  parser.h  (+5 more)
src/DataTypes/: Array.h  Array.hpp  Error.h  Error.hpp  Function.h  Function.hpp  Special.hpp  Token.h  Token.hpp  Variable.h  Variable.hpp
src/Parser/: EvaluateExpression.h  EvaluateExpression.hpp  Parser.h  Parser.hpp
src/Parsers/: BoolParser.h  BoolParser.hpp  IntParser.h  Parser.h  (+4 more)
tests/: README.md  actual_output.txt  main.cpp  night_tests.hpp  test-lexer-code.night  test-lexer.hpp  test.cpp  test.hpp  test.night  test_file.night  test_main.cpp  test_night.sh  test_parser.cpp  test_parser.hpp
(+148 files in other folders)
